*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.11 ===


=== 1.0.10 ===
* Updated module versions in dependencies.

=== 1.0.9 ===
* Added test build for Windows using MSYS2.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.8 ===
* Updated default data copy specification for the generic data type.
* Added Clang build for the CI.

=== 1.0.7 ===
* Updated build scripts.

=== 1.0.6 ===
* Updated build scripts.

=== 1.0.5 ===
* Several fixes in unit tests.
* Updated build scripts.

=== 1.0.4 ===
* Updated improper implementation of several const-methods for the lltl::parray
  collection.
* Added pphash::key method to obtain constant pointer for the allocated key.
* Updated build scripts.

=== 1.0.3 ===
* Added support of C++ 11 standard.
* Fixed compilation for Windows.
* Updated dependencies.
* Updated build scripts.

=== 1.0.2 ===
* Updated build scripts.

=== 1.0.1 ===
* Updated build scripts.

=== 1.0.0 ===
* Updated build scripts.
* Updated signature of pphash::keys, pphash::values and pphash::items methods
  to const.

=== 0.5.7 ===
* Disabled copy constructor for bitset.
* Updated build system.

=== 0.5.6 ===
* Updated sort interface functions for darray and parray.
* Updated build system.

=== 0.5.5 ===
* Better support of <stdlib.h> qsort_r() calls for different platforms.

=== 0.5.4 ===
* Added set_n to lltl::parray and lltl::darray with index specification.
* Added qsort() methods for lltl::parray and lltl::darray.

=== 0.5.3 ===
* Added lltl::bitset collection with basic methods for storing bit flags.
* Added lltl::phashset collection for quick managing of hash sets of objects.
* Added lltl::ptr_hash_func and lltl::ptr_cmp_func functions for managing
  object pointers which are considered to be unique for each object.
* Added contains() method to lltl::parray and lltl::darray collections.